Fixed overflow in contentArea layout

--- a/themes/whitewash/assets/css/screen.css
+++ b/themes/whitewash/assets/css/screen.css
@@ -342,6 +342,12 @@ button span[data-icon]:before {
 }
 */
 
+.layout-contentArea:before, 
+.layout-contentArea:after { content:""; display:table; }
+.layout-contentArea:after { clear:both; }
+.layout-contentArea {
+    zoom:1;
+}
 
 
 .prop-na {
